some fixes in saldo